re-configured with sidebar
* new sidebar
* using an infinitely smaller states geojson (110 MB now > 89 kb!)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-js/US_Counties.js
-js/US_States.js
+
+# hide the libraries we use
+js/bootstrap.bundle.min.js
+js/bootstrap.bundle.min.js.map
+js/jquery
+js/leaflet.js
+js/leaflet.js.map
+
+css/bootstrap.min.css
+css/bootstrap.min.css.map
+css/leaflet.css
+.DS_Store
